--- a/about.html
+++ b/about.html
@@ -5,8 +5,30 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+# 프로필
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+- 이름 : 고원
+- 학번 : 2020108161
+- 전공 : 컴퓨터공학과
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+# 경험한 언어
+<p> C, C++, 자바, 파이썬</p>
+
+# Fork
+
+### angular.js
+
+__<https://github.com/KoWon00/go>__
+- AngularJS is a structural framework for dynamic web apps. 
+It lets you use HTML as your template language and lets you extend HTML's syntax to express your application's components clearly and succinctly. 
+AngularJS's data binding and dependency injection eliminate much of the code you would otherwise have to write.
+And it all happens within the browser, making it an ideal partner with any server technology. 
+
+### go
+
+__<https://github.com/KoWon00/angular.js>__
+- Go is an open source programming language used for general purposes. Go was developed by Google engineers to create dependable and efficient software. 
+Most similarly modeled after C, Go is statically typed and explicit. 
+The language was designed by taking inspiration for the productivity and relative simplicity of Python, with the ability of C. 
+Some examples of organizations that use Go include Google, Cloudflare, Dropbox, MongoDB, Netflix, SoundCloud, Twitch and Uber.
+
